--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             fontname: "Saira Condensed",
             googlefont: "Saira+Condensed:wght@100",
             fontratio: "0.4",
-            radioname: "Suna Señal De Bendición",
+            radioname: "Una Señal De Bendición",
             scroll: "false",
             coverimage: "https://i.ibb.co/Wv8d2Szv/logo-serenata.png",
             onlycoverimage: "false",
